@@ -318,7 +318,7 @@ public class ShadowRenderer {
       this.size = shadowSize;
     }
 
-    changeSupport.firePropertyChange(SIZE_CHANGED_PROPERTY, new Integer(oldSize), new Integer(this.size));
+    changeSupport.firePropertyChange(SIZE_CHANGED_PROPERTY, Integer.valueOf(oldSize), Integer.valueOf(this.size));
   }
 
   /**
